--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   flutter_launcher_icons: "^0.13.1"
   dropdown_button2: ^2.3.9
   animated_custom_dropdown: ^3.1.1
+  shared_preferences: ^2.3.2
+  tutorial_coach_mark: ^1.2.11
 
 dev_dependencies:
   flutter_test:
