--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   animated_custom_dropdown: ^3.1.1
   shared_preferences: ^2.3.2
   tutorial_coach_mark: ^1.2.11
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
