--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,12 +3,13 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id 'com.google.gms.google-services'  // Ensure this line is here to apply the Google services plugin
 }
 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file("local.properties")
 if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader("UTF-8") { reader ->
+    localPropertiesFile.withReader("UTF-8") { reader -> 
         localProperties.load(reader)
     }
 }
@@ -34,11 +35,9 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.recipe"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        applicationId = "com.example.recipe"  // Your unique app ID
+        /* minSdk = flutter.minSdkVersion */
+        minSdkVersion 23  // Set to 23 (or higher)
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
@@ -46,13 +45,21 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.debug  // Set your release signing config here
         }
     }
 }
 
 flutter {
-    source = "../.."
+    source = "../.."  // Adjust to point to your Flutter project
+}
+
+dependencies {
+    // Firebase BoM to manage versions of Firebase libraries
+    implementation platform('com.google.firebase:firebase-bom:33.5.1')
+
+    // Add Firebase dependencies you want to use. Example:
+    implementation 'com.google.firebase:firebase-auth'  // Firebase Auth
+    implementation 'com.google.firebase:firebase-firestore'  // Firestore
+    // Other Firebase products can be added as needed.
 }
