--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -7,6 +7,7 @@ pluginManagement {
         return flutterSdkPath
     }()
 
+    // Include Flutter gradle tools
     includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
 
     repositories {
@@ -17,9 +18,14 @@ pluginManagement {
 }
 
 plugins {
+    // Flutter plugin loader for Flutter integration
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+
+    // Android application plugin, set to version 8.1.1 (or the latest compatible version)
     id "com.android.application" version "8.1.1" apply false
-    id "org.jetbrains.kotlin.android" version "1.7.10" apply false
+
+    // Kotlin plugin for Android, ensure version is compatible with your project
+    id "org.jetbrains.kotlin.android" version "1.9.0" apply false  // Update to 1.9.0 for compatibility
 }
 
 include ":app"
