--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,15 @@ dependencies:
   shared_preferences: ^2.3.2
   tutorial_coach_mark: ^1.2.11
   speech_to_text: ^7.0.0
+  supabase: ^2.5.0
+  supabase_flutter: ^2.8.0
+  google_sign_in: ^6.2.2
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  flutter_colorpicker: ^1.1.0
+  flutter_hsvcolor_picker: ^1.5.1
+  loading_animation_widget: ^1.3.0
+  flutter_svg: ^2.0.13
 
 dev_dependencies:
   flutter_test:
@@ -98,6 +107,8 @@ flutter:
     - assets/images/bg.png
     - assets/images/splash_screen.png
     - assets/images/logo.png
+    - assets/images/login_bg.jpg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
