--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ dependencies:
   flutter_hsvcolor_picker: ^1.5.1
   loading_animation_widget: ^1.3.0
   flutter_svg: ^2.0.13
+  heroicons_flutter: ^0.4.0
+  filter_list: ^1.0.3
 
 dev_dependencies:
   flutter_test:
