--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,10 +107,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/bg.png
+    - assets/images/bg1.png
     - assets/images/splash_screen.png
+    - assets/images/splash.png
     - assets/images/logo.png
     - assets/images/login_bg.jpg
-
+    - assets/images/log_bg.png
+    - assets/icons/google_icon.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
