--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: recipe
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.4.3 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,7 +45,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.3
   json_annotation: ^4.8.1
-  provider: ^6.1.2  
+  provider: ^6.1.2
   popover: ^0.3.0+1
   flutter_speed_dial: ^7.0.0
   url_launcher: ^6.3.0
@@ -101,7 +100,6 @@ flutter_icons:
   image_path: "assets/images/logo.png"
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -109,8 +107,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/bg.png
-    - assets/images/bg1.png
     - assets/images/splash_screen.png
     - assets/images/splash.png
     - assets/images/logo.png
@@ -119,6 +115,9 @@ flutter:
     - assets/images/bg_home.jpg
     - assets/images/test.jpg
     - assets/icons/google_icon.svg
+    - assets/icons/youtube.svg
+    - assets/icons/logout.svg
+    - assets/icons/add.svg
     - assets/icons/steak_icon.svg
     - assets/icons/no_items.png
     - assets/icons/no_recipe.png
