--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,7 +27,9 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.example.recipe"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+
+    // Set the NDK version here to match the highest required version
+    ndkVersion = "25.1.8937393"  // Updated NDK version
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -36,11 +38,15 @@ android {
 
     defaultConfig {
         applicationId = "com.example.recipe"  // Your unique app ID
-        /* minSdk = flutter.minSdkVersion */
         minSdkVersion 23  // Set to 23 (or higher)
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+
+        // Specify ABI filters to include only x86_64
+         ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'  // Excluding 'mips' and 'mips64' if not necessary
+        }
     }
 
     buildTypes {
