--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,10 @@ dependencies:
   awesome_dialog: ^3.2.1
   material_dialogs: ^1.1.5
   lottie: ^3.2.0
+  image_picker: ^1.1.2
+  http: ^1.3.0
+  crypto: ^3.0.6
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
