--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ dependencies:
   http: ^1.3.0
   crypto: ^3.0.6
   cached_network_image: ^3.4.1
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
