--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,6 @@ dependencies:
   webview_flutter: ^4.9.0
   linkable: ^3.0.2
   redirect_icon: ^0.0.1
-  lite_rolling_switch: ^1.0.1
   switcher_button: ^0.0.4
   animated_switch: ^0.0.3
   toggle_switch: ^2.3.0
@@ -86,6 +85,9 @@ dependencies:
   crypto: ^3.0.6
   cached_network_image: ^3.4.1
   http_parser: ^4.0.2
+  shimmer: ^3.0.0
+  intl: ^0.19.0
+  awesome_snackbar_content: ^0.1.5
 
 dev_dependencies:
   flutter_test:
@@ -153,6 +155,12 @@ flutter:
     - assets/lottie_json/cat.json
     - assets/lottie_json/fall.json
     - assets/lottie_json/cups.json
+    - assets/lottie_json/pulsing_ai.json
+    - assets/lottie_json/pulsing_ai2.json
+    - assets/lottie_json/pulsing_ai3.json
+    - assets/lottie_json/creating.json
+    - assets/lottie_json/success.json
+    - assets/lottie_json/success2.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
