--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,9 @@ dependencies:
   shimmer: ^3.0.0
   intl: ^0.19.0
   awesome_snackbar_content: ^0.1.5
+  auto_animated: ^3.2.0
+  gif: ^2.3.0
+  flutter_popup: ^3.3.4
 
 dev_dependencies:
   flutter_test:
@@ -124,6 +127,10 @@ flutter:
     - assets/images/log_bg.png
     - assets/images/bg_home.jpg
     - assets/images/test.jpg
+    - assets/images/update.jpg
+    - assets/images/dish.gif
+    - assets/images/cat.gif
+    - assets/images/help.png
     - assets/icons/google_icon.svg
     - assets/icons/youtube.svg
     - assets/icons/logout.svg
@@ -161,6 +168,12 @@ flutter:
     - assets/lottie_json/creating.json
     - assets/lottie_json/success.json
     - assets/lottie_json/success2.json
+    - assets/lottie_json/swiping.json
+    - assets/lottie_json/dishtu.json
+    - assets/lottie_json/recipetu.json
+    - assets/lottie_json/youtube.json
+    - assets/lottie_json/aitu.json
+    - assets/lottie_json/vegtoggle.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
