--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dependencies:
   auto_animated: ^3.2.0
   gif: ^2.3.0
   flutter_popup: ^3.3.4
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
@@ -150,6 +151,7 @@ flutter:
     - assets/icons/beverages.png
     - assets/icons/salads.png
     - assets/icons/ingredients.png
+    - assets/icons/add.png
     - assets/lottie_json/mail_sent.json
     - assets/lottie_json/nothing.json
     - assets/lottie_json/norecipe.json
@@ -174,6 +176,9 @@ flutter:
     - assets/lottie_json/youtube.json
     - assets/lottie_json/aitu.json
     - assets/lottie_json/vegtoggle.json
+    - assets/lottie_json/empty.json
+    - assets/lottie_json/delete.json
+    - assets/lottie_json/helping.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
