--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,8 +65,6 @@ dependencies:
   supabase: ^2.5.0
   supabase_flutter: ^2.8.0
   google_sign_in: ^6.2.2
-  firebase_core: ^3.6.0
-  firebase_auth: ^5.3.1
   flutter_colorpicker: ^1.1.0
   flutter_hsvcolor_picker: ^1.5.1
   loading_animation_widget: ^1.3.0
@@ -92,6 +90,8 @@ dependencies:
   gif: ^2.3.0
   flutter_popup: ^3.3.4
   connectivity_plus: ^6.1.3
+  window_size: ^0.1.0
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
